--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.5",
     "express": "^4.18.2",
+    "primeng": "^17.18.4",
     "rxjs": "~7.8.0",
     "swiper": "^11.1.5",
     "tslib": "^2.3.0",
